removed the PR_MAX forcing the y offset to be zero or greater. Not sure why it was doing this. r=kmcclusk Bug #16152